<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chronicle</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="you_are_not_currently_subscribed">You are not currently subscribed</string>
    <string name="subscription_option_detail">Please choose a subscription option from below or alternatively give our app a try by choosing \'Download Free Sample\'</string>
    <string name="seprator">seprator</string>
    <string name="got_a_story_">Got a Story?</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="subject">Subject:</string>
    <string name="comment">Comment:</string>
    <string name="attachment">Attachment:</string>
    <string name="enter_your_email_address">Please Enter Your Email Address</string>
    <string name="please_enter_subject">Please Enter Subject</string>
    <string name="image_picker">Image Picker</string>
    <string name="comment_details">Enter your story details here.</string>
    <string name="logo">Logo</string>
    <string name="center_epaper_icon">center epaper Icon</string>
    <string name="feedback">Feedback</string>
    <string name="offer_placeholder_image">Offer Placeholder Image</string>
    <string name="local_offers">Local Offers</string>
    <string name="banner_image">Banner Image</string>
    <string name="banner_title">Banner Title</string>
    <string name="banner_offer">Banner Offer</string>
    <string name="offer_details">Offer Details</string>
    <string name="my_library">My Library</string>
    <string name="refresh">Refresh</string>
    <string name="newspaper_image">Newspaper Image</string>
    <string name="delete">Delete</string>
    <string name="swipe_home">Home</string>
    <string name="swipe_got_a_story">Got a Story?</string>
    <string name="swipe_local_offers">Local Offers</string>
    <string name="swipe_feedback">Feedback</string>
    
    
    
    <string name="s_ink">Ink</string>
    <string name="s_rect">Rect</string>
    <string name="s_remove">Remove</string>
    <string name="s_save">Save</string>
    <string name="s_end">End</string>
    <string name="s_prev">&lt;</string>
    <string name="s_next">&gt;</string>
    <string name="s_find">the</string>
    <string name="s_act">Do</string>
    <string name="s_saveas">Save as</string>
    <color name="clr_back">#FFCCCC80</color>
    <string name="s_edit">Edit</string>
    

</resources>