<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/epaper" >

    <LinearLayout
        android:id="@+id/fullBody"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/firstTopPart"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayoutHeaderLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/logo"
                    android:scaleType="fitXY"
                    android:src="@drawable/logo" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutLibrary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/mylibrary"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="right"
                    android:background="@drawable/btn_mylibrary"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutepaper"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/myepaper"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/center_epaper_icon"
                    android:paddingBottom="5dp"
                    android:src="@drawable/dashboard" />
            </LinearLayout>
        </LinearLayout>
        <!-- ======================================================================================= -->

        <LinearLayout
            android:id="@+id/BottomArea"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight=".65"
            android:background="@color/main_bottom_bg"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/subsTypeDetail"
                    style="@style/txtCode"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="center|center_vertical"
                    android:text="@string/you_are_not_currently_subscribed"
                    />
            </LinearLayout>

            <ImageView
                android:id="@+id/seprator_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/seprator_line"
                android:contentDescription="@string/seprator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight=".87"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/detail"
                    style="@style/txtCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/subscription_option_detail" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageButton
                    android:id="@+id/month_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/btn_1month"
                    android:contentDescription="@string/seprator" />

                <!-- style="@style/btnImageButton" -->

                <ImageButton
                    android:id="@+id/month_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:background="@drawable/btn_12month"
                    android:contentDescription="@string/seprator" />
            </LinearLayout>
            <!-- style="@style/btnImageFree" -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageButton
                    android:id="@+id/free_sample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:background="@drawable/btn_free_sample"
                    android:contentDescription="@string/seprator" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>